# animood

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  get_context.sh
anime-llm-analysis/: .hack__G.U. Returner.txt  .hack__G.U. Trilogy.txt  .hack__G.U. Trilogy_ Parody Mode.txt  .hack__Gift.txt  .hack__Intermezzo.txt  .hack__Liminality.txt  .hack__Quantum.txt  .hack__Roots.txt  .hack__Sign.txt  .hack__Tasogare no Udewa Densetsu.txt  .hack__Tasogare no Udewa Densetsu_ Offline de Aimashou.txt  .hack__The Movie_ Sekai no Mukou ni.txt  .hack__Unison.txt  009 Re_Cyborg.txt  009-1.txt  07-Ghost.txt  100-man no Inochi no Ue ni Ore wa Tatteiru 2nd Season.txt  100-man no Inochi no Ue ni Ore wa Tatteiru.txt  1001 Nights.txt  11-nin Iru!.txt  11eyes.txt  11eyes_ Momoiro Genmutan.txt  12-sai..txt  12-sai._ Chicchana Mune no Tokimeki 2nd Season.txt  12-sai._ Chicchana Mune no Tokimeki.txt  15 Bishoujo Hyouryuuki.txt  16bit Sensation_ Another Layer.txt  180-byou de Kimi no Mimi wo Shiawase ni Dekiru ka_.txt  18if.txt  2.43_ Seiin Koukou Danshi Volley-bu.txt  2.5-jigen no Ririsa.txt  22_7.txt  25-sai no Joshikousei.txt  3-gatsu no Lion 2nd Season.txt  3-gatsu no Lion Recap.txt  3-gatsu no Lion meets Bump of Chicken.txt  3-gatsu no Lion.txt  3-nen Z-gumi Ginpachi-sensei.txt  30-sai made Doutei dato Mahoutsukai ni Nareru Rashii.txt  30-sai no Hoken Taiiku.txt  (+6492 more)
src/: api.rs  embedder.rs  lib.rs  load_dataset.rs  main.rs  mal_functions.rs  mal_types.rs  model.rs  search.rs  state.rs  types.rs  vec_ops.rs
wasm/: Cargo.toml
