[package]
name = "animood"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
candle-core = { version = "0.9.1"}
candle-nn = "0.9.1"
candle-transformers = { version = "0.9.1"}
hf-hub = "0.3"
tokenizers = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "4.5.53"
bincode = "1.3"
rayon = "1.10"
rand = "0.8"

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }